# software

./: README.md
contrib/Andrea/: vro.rar
contrib/johnno56/: grid.sdlbas
contrib/lee/: char.sdlbas
contrib/paulo/: 36Pointers_050315.sdlbas
contrib/steve starr/: sample.sdlbas
contrib/tim/: sdlBasic-spelling.patch
old/: sdlBasic.nsi
old/editors/ide/ide_glade2/: Makefile  Makefile.am  Makefile.in  aclocal.m4  config.h  config.status  configure  configure.in  ide_glade.glade.bak  ide_glade.gladep
old/editors/ide/ide_glade2/autom4te.cache/: output.0  output.1  requests  traces.0  traces.1
old/editors/ide/ide_glade2/devcpp/: config.h  ide_gl-2.dev  ide_glade.dev
old/editors/ide/ide_glade2/msvc/: config.h  ide_gl-2.dsp  ide_gl-2.dsw  ide_gl-2.ncb  ide_gl-2.opt  ide_gl-2.plg  ide_glade.dsp  ide_glade.dsw  ide_glade.ncb  ide_glade.opt  ide_glade.plg
old/editors/ide/ide_glade2/msvc/Debug/: ide_gl-2.ilk  ide_glade.ilk  ide_glade.pch  vc60.idb
old/editors/ide/ide_glade2/msvc/Release/: ide_gl-2.pch  ide_glade.pch  vc60.idb
old/editors/ide/ide_glade2/pixmaps/: 1rightarrow.xpm  filenew.xpm  filesave.xpm  folder.xpm  next.xpm  stop.xpm
old/editors/ide/ide_glade2/po/: Makefile  Makefile.in
old/editors/ide/ide_glade2/src/: Makefile  Makefile.am  Makefile.in  callbacks.c  callbacks.h  ide_gl-2  interface.c.bak  interface.h.bak  main.c
old/editors/ide/ide_glade2/src/.deps/: callbacks.Po  interface.Po  main.Po  support.Po
old/editors/ide/ide_glade2/src/pixmaps/: excel.ppm  redo.xpm  sdlBasic.xpm  undo.xpm
old/sdlBasic_opengl/: compile.sh  install.sh  (+1 more)
(+1140 files in other folders)
